Prevent mobile header from shrinking, to cause header brand wrap (for huge titles)

--- a/src/_header.scss
+++ b/src/_header.scss
@@ -151,6 +151,7 @@
         font-size: 2em;
       }
     }
+    .header--menu { flex-shrink: 0; }
     .header--menu .header--item {
       display: none;
 
